Fix -Dverifyall to eagerly verify all reachable methods and assert if anything lazy-verifies (bug 474968 r=lhansen+)

New entry point for full verification is in prepareActionPool, before
we invoke the first script init method.

Activation traits must be eager-verified to pick up their generated
init method.