core/AvmCore.h
@@ -182,9 +182,9 @@ const int kBufferPadding = 16;
 		#endif
 #ifdef AVMPLUS_VERIFYALL
         List<AbstractFunction*, LIST_GCObjects> verifyQueue;
-		void enq(AbstractFunction* f);
-		void enq(Traits* t);
-		void processVerifyQueue(Toplevel* toplevel);
+		void enqFunction(AbstractFunction* f);
+		void enqTraits(Traits* t);
+		void verifyEarly(Toplevel* toplevel);
 #endif
 
 		void branchCheck(MethodEnv *env, bool interruptable, int go)
